--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@azure/data-tables": "^13.2.2",
-    "next": "14.2.15",
+    "next": "^14.2.24",
     "react": "^18",
     "react-dom": "^18"
   },
